--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prebuild": "npm run clean && mkdir build",
     "clean": "rm -rf build",
     "css": "cp ./src/style.css ./build/",
-    "index": "node bin/projects.js -card ./src/card.tmpl -template ./src/index.html ./build/index.html"
+    "index": "node bin/projects.js -card ./src/card.tmpl -template ./src/index.html ./build/index.html",
+    "pages:publish": "git push upstream `git subtree split --prefix build master`:gh-pages --force",
+    "prepages:publish": "npm run build && git add build -f && git commit -am publishing",
+    "postpages:publish": "git reset --hard master^"
   },
   "author": "Joshua T Kalis <kalisjoshua@gmail.com> (http://kalisjoshua.me)",
   "license": "MIT"
