Squashed 'projects/' changes from 8ffe4be..1a6ef48
1a6ef48 Merge pull request #7 from quickenloans-oss/bulk-update-jkalis
e9c2118 change template for proposal; review content
9750428 proper format
b243953 encourage multiline description
978c115 add js-concord
4bab32a add maintainers field to template
df1d96e add maintainers
c0aaf3b add ui-packages
7c26879 add jquery-image-uploader
291282f add RcokFramework
e13b165 add message-router
a538b98 add lucidboard
3279120 add RAMLLint
797820d add xserializer

git-subtree-dir: projects
git-subtree-split: 1a6ef48194e499b3e9bd06344a593b2ff417ea73

--- a/projects/luxui.yml
+++ b/projects/luxui.yml
@@ -9,6 +9,8 @@ keywords:
   - javascript
   - reactjs
 language: JavaScript
+maintainers:
+  kalisjoshua: joshkalis@quickenloans.com
 type: library
 url:
   logo:
