--- a/proposal-template.yml
+++ b/proposal-template.yml
@@ -1,9 +1,17 @@
+# All fields required unless indicated as optional
+
 title: Project Name
-description: Describe the project briefly.
+description: >
+  Describe the project briefly; could the first sentence(s) from the README.md.
 keywords:
-language:
-type: application, tool, library, or documentation
+  # - (optional) interesting languages or technologies
+language: single-value
+maintainers:
+  # Primary maintainer's name first
+  GitHubUsername: teammember@quickenloans.com
+  # (optional) additional maintainers listed below
+type: # one of [application, tool, library, documentation]
 url:
-  logo: http://foo.bar/logo.png
-  project: http://foo.bar
+  logo: # (optional) http://foo.bar/logo.png
+  project: # (optional) http://foo.bar
   repository: http://foo.bar.git
