--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Landing page for organizing Quicken Loans' open source projects.",
   "scripts": {
     "build": "npm run favicon && npm run index && npm run js && npm run sass",
-    "prebuild": "npm run clean && mkdir build",
+    "prebuild": "npm run clean && mkdir build && npm run lint",
     "clean": "rm -rf build",
     "favicon": "cp ./src/favicon.ico ./build",
     "index": "node bin/projects.js -card ./src/card.tmpl -template ./src/index.html ./build/index.html",
